# disk-analyser

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
assets/: index.css
src/: disk.rs  leptos_axum.rs  main.rs
