[package]
name = "disk-space-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.6.20", features = ["macros", "ws"] }
leptos = { version = "0.5.0", features = ["ssr"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
futures = "0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"